# Point2Mouse

./: README.md
mediapipe/: main.py  pyproject.toml
