[project]
name = "mediapipe-3d-hands"
version = "0.1.0"
description = "Real-time 3D hand pose detection using MediaPipe"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.12.0.88",
    "mediapipe>=0.10.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pyautogui>=0.9.50",
]
